--- a/blog/7.md
+++ b/blog/7.md
@@ -1,5 +1,17 @@
-A moral como afirmei em outro artigo possui dois aspectos, o aspecto físico ou material, que se traduz como Honra e o aspecto psíquico que se traduz como Fé. É importante levar em conta esta dualidade pois nosso questionamento do mundo à nossa volta e nosso senso de julgamento ocorrem nestes dois âmbitos, uma hora influenciado mais por um, outra hora influenciado mais por outro. Por exemplo, podemos num momento julgar as ações de um indivíduo baseado numa experiência que tivemos na infância, se ela foi ruim, e vemos o indivíduo repetir o ato que nos causou mal, nossa honra se fere novamente e é assim que julgamos, ou podemos julgar as ações de um indivíduo com base em nossas crenças (não exatamente ao que nos foi ensinado, mas ao que aprendemos), se essa crença diz que tal ação é errada, é assim que julgamos.
-A moral é interna e externa, nos estamos também julgando nossas próprias ações constantemente, daí surge o arrependimento, a justificativa, a depressão etc. A moral é uma balisa social desenvolvida e evoluida ao longo do tempo na civilização como forma de autopreservação, de equilibrio social e de promoção de bem estar e ela alcança niveis muito acima do que a capacidade atual de compreensão da civilização é capaz de enxergar, ou seja, assim como outros segredos da ciência, a moral não pode ainda ser compreendida plenamente e seu alcance é desconhecido.
-Assim como tudo ao nosso redor e em nós é submetido ao nosso senso moral, a própria moral também o é, e se essa afirmação fosse incorreta não seria necessário incentivar o ser Humano a "amar ao próximo como a si mesmo", pois nossa moral também é submetida a um senso moral constantemente e geralmente de forma extremamente flexível, por exemplo, no momento em que se é roubado, o roubo é algo terrível, no momento em que se vê sozinho com um bem de valor inestimável sem chances de ser reconhecido posteriormente, o mesmo roubo que antes era terrível passa a ser justificável, é por isso que é preciso "se colocar no lugar do outro", "tratar o outro como se gostaria de ser tratado" e "amar ao próximo como a si mesmo". Mas há ainda o oposto, a culpa gerada por um ato errado que devido a uma cultura impiedosa e poucas mão estendidas pode levar um indivíduo que não consegue sozinho, perdoar a si mesmo, a vivenciar um sofrimento psíquico a tal ponto de retirar a própria vida.
-A moral portanto jamais deve ser individual além do ponto de julgar nossas próprias ações e de julgar nossa própria moral, além disso, a moral deve ser coletiva, e é essa moral que na maioria das vezes é atacada. A quem interessa o fim da moral? A quem interessa uma sociedade cujos pilares são o individualismo e a ignomínia? Se você responder que isso interessa somente ao imoral, está completamente errado, o imoral é a vitima da corrupção, o corruptor, nem sempre é ele próprio imoral. Muitas vezes o desmoralizador vive uma vida puritana e exemplar. A sociedade está cheia de exemplos de pessoas que viajam pelo país ou pelo mundo dando palestras sobre o fim da monogamia, em defesa da poligamia, quando essas mesmas pessoas têm aliança no dedo, são muito bem casadas, têm filhos e uma família feliz. Neste ponto, o tema mais sensível, para quem considera que temas possam ser sensíveis, é o moralismo. Seria natural que quem defende moral seja moralista, mas este termo ganhou nuances que não poderiam ser deixadas de lado, porque quando olhamos ao exemplo de Jesus com Maria Madalena temos um ponto de partida muito simples, é possivel alguém que se considera "humano" crer que outra pessoa merece sofrer simplesmente porque os pecados dela são diferentes do seu? Não teria todo pecador, sentimentos, dores, dificuldades, teria um pai o direito de matar ou espanca uma filha pega em relações íntimas com outra mulher, não teria mais ela o direito de um lar? É obvio que quando o erro chega ao ponto de afetar o ambiente ao redor a tal ponto que o equilibrio social se rompa uma punição se faz necessária, mas é preciso acima de tudo saber dinstinguir o imoral do imoralizador, o corrupto do corruptor, e quem merece socorro de quem merece punição.
-Por mais que algo nese artigo tenha o incomodado, sem essa compreensão, o termo moralista será impresso em nossas testas tornando-os menos humanos, insensíveis e tornando a moral, ao contrário de tudo o que ela é que descrevi neste artigo, apenas instrumento de dor, sofrimento, injustiça, pre-julgamentos e, em vez de balizar o convívio social, proteger a integridade física e mental dos indivíduos e promover a honra, o bem estar, a cooperação e o equilíbrio social, ela passará a ser instrumento de divisão e guerra.
+A moral, como afirmei em outro artigo, tem dois aspectos: o físico ou material, que se traduz como honra, e o psíquico, que se traduz como fé. É importante considerar essa dualidade porque nosso questionamento do mundo e nosso senso de julgamento ocorrem nesses dois âmbitos, ora influenciados mais por um, ora mais por outro. Por exemplo, podemos julgar as ações de uma pessoa com base em uma experiência negativa da infância, se essa pessoa repetir um ato que nos causou mal, sentimos que nossa honra é novamente ferida. Alternativamente, podemos julgar com base em nossas crenças (não necessariamente o que nos foi ensinado, mas o que aprendemos). Se acreditamos que uma ação é errada, é assim que julgamos.
+
+A moral é interna e externa. Também estamos constantemente julgando nossas próprias ações, o que pode levar a arrependimento, justificativas, depressão, entre outros. A moral é uma construção social desenvolvida ao longo do tempo como forma de autopreservação, equilíbrio social e promoção do bem-estar que está enraizada no mais profundo do nosso ser e não pode ser anulada ou extinta. Ela atinge níveis que a capacidade atual da civilização ainda não consegue compreender plenamente. Assim como outros "mistérios da humanidade", a moral não pode ser totalmente entendida, e seu alcance é desconhecido. Não sabemos até que ponto ela nos preserva e quais são todos os aspectos dessa preservação.
+
+Assim como tudo ao nosso redor e em nós é submetido ao nosso senso moral, a própria moral também o é. Se isso não fosse verdade, não seria necessário incentivar o ser humano a "amar o próximo como a si mesmo". Nossa moral também é constantemente avaliada de forma flexível. Por exemplo, um roubo pode ser visto como terrível quando ocorre com nós mesmos, mas pode parecer justificável se estivermos sozinhos com um bem de valor inestimável e sem chances de sermos reconhecidos. É por isso que é importante "se colocar no lugar do outro", "tratar o outro como gostaria de ser tratado" e "amar o próximo como a si mesmo". No entanto, também há o oposto: a culpa gerada por um erro, que, em uma cultura impiedosa e com poucas mãos estendidas, pode levar alguém a sofrer psicologicamente a ponto de tirar a própria vida.
+
+Portanto, a moral nunca deve ser individual, exceto para julgar nossas próprias ações e nossa própria moral. Além disso, a moral deve ser coletiva, pensada para a preservação do coletivo. É essa moral que frequentemente é atacada. Quem se beneficia com o fim da moral? Quem deseja uma sociedade cujos pilares são o individualismo e a ignomínia? Se você acha que isso interessa apenas aos imorais, está completamente enganado. O imoral é a vítima da corrupção. O corruptor nem sempre é imoral; muitas vezes, vive uma vida exemplar e puritana. A sociedade está cheia de exemplos de pessoas que trabalham para promover mudanças radicais numa tentativa de combater a moralidade, enquanto elas próprias, não vivem em suas vidas a imoradidade que pregam.
+
+É natural que quem defende a moral seja chamado de "moralista", mas esse termo ganhou conotações negativas que não podemos ignorar. Por exemplo, quando olhamos para a história de Jesus diante da tentativa de apedrejamento de Maria Madalena, vemos um exemplo claro: pecadores prestes a cometer um homicídio contra uma mulher apanhada em adultério, punindo um pecado com outro muito maior. É possível que alguém que se considera "humano" acredite que outra pessoa merece sofrer simplesmente por ter cometido pecados diferentes dos seus? Não teriam todos os pecadores sentimentos, dores e dificuldades? Não seríamos todos pecadores em busca de correção e arrependimento? Teria um pai o direito de matar ou espancar uma filha pega em relações íntimas com outra mulher? Ela não teria o direito a um lar e a ser considerada humana?
+
+É claro que, quando o erro de um indivíduo afeta tanto o ambiente ao redor que quebra o equilíbrio social, uma punição pode ser necessária para cessar o erro e restaurar o equilíbrio. No entanto, é crucial distinguir: o imoral do imoralizador; o corrupto do corruptor; quem merece socorro de quem merece punição.
+
+Mesmo que algo neste artigo tenha lhe incomodado, sem essa compreensão, o termo "moralista" será usado de forma a nos tornar menos humanos e insensíveis. Em vez de ser um instrumento de justiça, a moral se tornará um meio de dor, sofrimento e injustiça, de <b>divisão e guerra</b>.
+
+E com essa compreensão, ela será a fundação sólida da sociedade para promover a honra, a retidão, a verdade e a sinceridade, o bem-estar, a cooperação e o <b>equilíbrio social</b>.
+
+<small style="text-align: right; font-style: italic; width: 100%">Revisado;</small>
