--- a/blog/8.md
+++ b/blog/8.md
@@ -5,3 +5,5 @@ Não basta confiar apenas em nossa fé para fazer julgamentos. Também não é s
 Ela consiste em evitar extremos e também o meio-termo. Não se trata de ser "morno" ou ficar em cima do muro, mas sim de saber quando agir e quando se abster. A temperança não é um dom ou qualidade inata; é uma arte que deve ser praticada constantemente. Ela molda o resultado de nossas ações, palavras, julgamentos e omissões, é assumir o controle sobre as consequências resultantes de cada uma. Não se trata de afirmar que nem A nem B são válidos, nem de aceitar ambos. A verdadeira temperança envolve avaliar A e B, considerando cada característica e decidindo se é benéfico e frutífero agir ou tomar uma posição com base no resultado dessa avaliação.
 
 Em resumo, a temperança significa evitar julgamentos precipitados, palavras impensadas e sentimentos destrutivos. Ela nos leva a buscar o <b>equilíbrio na medida de todas as coisas<b>.
+
+<small style="text-align: right; font-style: italic; width: 100%">Revisado;</small>
