--- a/blog/12.md
+++ b/blog/12.md
@@ -1,16 +1,16 @@
 Quero falar um pouco sobre a Aceitação de Deus, não de sermos aceitos, porque Deus a ninguem rejeita (se você nEle crê), se alguém dEle se afasta fez unicamente por suas próprias ações, mesmo que não por sua própria decisão, mas quero falar do ser humano aceitar a Deus bem como aceitar sua existência.
 
-Essa introdução pode fazer parecer o começo de um texto escrito por um religioso para alguém "do mundo", muito pelo contrário, na realidade, todo ser humano está precisando aceitar a Deus, seja em menor ou maior grau, seja num sentido ou outro, e quero fazer uma passagem sobre os pontos mais importantes, a começar claro, pelos motivos que levam alguem crer, ou mesmo duvidar que Deus não existe, ou a crer que Deus é mal. Quanto a crer que Ele existe, não é exclusividade dos ateus, agnósticos, politeístas e panteístas, por incrível que pareça, mesmo o crente, costuma ser crente no momento da bonança e duvidoso no momento do infortúnio, o que é humano e compreensível, mas o fato de estar crente no momento da bonança não dá o direito de apontar o dedo àquele que decidiu ser descrente por toda a vida.
+Essa introdução pode fazer parecer o começo de um texto escrito por um religioso para alguém "do mundo", muito pelo contrário, na realidade, todo ser humano está precisando aceitar a Deus, seja em menor ou maior grau, seja num sentido ou outro, e quero fazer uma passagem sobre os pontos mais importantes, a começar claro, pelos motivos que levam alguem crer, ou mesmo duvidar que Deus não existe, ou a crer que Deus é mal. Quanto a crer que Ele não existe, não é exclusividade dos ateus, agnósticos, politeístas e panteístas, por incrível que pareça, mesmo o crente, costuma ser crente no momento da bonança e duvidoso no momento do infortúnio, o que é humano e compreensível, mas o fato de estar crente no momento da bonança não dá o direito de apontar o dedo àquele que decidiu ser descrente por toda a vida.
 
 Na realidade, a descrença é somente cultural e ela exige que o indivíduo ignore um monte de fatores, evidências e lógicas, e na maioria das vezes apresentar esses fatores, evidências e lógicas com argumentos bem elaborados, faz menos efeito do que duas crianças discutindo por qual desenho animado é melhor, exemplos e experiências terão o impacto esperado e então, todo o restante passará a fazer sentido. Quanto à crença de que Deus é mal, e digo crença porque ela está no caminho oposto da descrença, o indivíduo crê, mas não aceita, pode ter duas fontes, ambas escuras, uma provinda do imediato, outra da eternidade, a que provém do imediato são as experiências que envolvem seus sentimentos mais íntimos que quando os abalam mexem em sua estrutura de crenças, isso significa que um evento impactante pode ter levado o indivíduo a esse ponto, e o caminho de volta é a cura e restauração do estado anterior, ou, em último caso, o mesmo que ocorre com o descrente, ele precisa de exemplos e experiências que o levem a enxergar novamente.
 
-A segunda fonte, também escura provém da eternidade, é perene com o próprio universo e é a própria escuridão, e todos nós a possuímos um pouco, uns mais outros menos, afinal estamos todos a caminho da Luz, e é esse caminho em direção à Luz é a aceitação a Deus. Mas como estamos falando daqueles que simplesmente decidiram não aceitar, porque creem que há algo errado nesse caminho, quem os poderá convencer do oposto? Devem ser convencidos do oposto? A verdade é que assim como todos possuímos um pouco de escuridão, também todos possuimos um pouco de luz e mesmo quem decidiu não aceitar, há algo bom nele, ele pode sentir a dor do outro, ele pode se indignar com uma injustiça, aliás, muitas vezes essa decisão de não aceitação é uma indignação com uma injustiça, por isso ele não afirma ser ele mal, afirma que Deus é que o é. Mas quem ou o que é Deus?
+A segunda fonte, também escura provém da eternidade, é perene com o próprio universo e é a própria escuridão, e todos nós a possuímos um pouco, uns mais outros menos, afinal estamos todos a caminho da Luz, e esse caminho em direção à Luz é a aceitação a Deus. Mas como estamos falando daqueles que simplesmente decidiram não aceitar, porque creem que há algo errado nesse caminho, quem os poderá convencer do oposto? Devem ser convencidos do oposto? A verdade é que assim como todos possuímos um pouco de escuridão, também todos possuimos um pouco de luz e mesmo quem decidiu não aceitar, há algo bom nele, ele pode sentir a dor do outro, ele pode se indignar com uma injustiça, aliás, muitas vezes essa decisão de não aceitação é uma indignação com uma injustiça, por isso ele não afirma ser ele mal, afirma que Deus é que o é. Mas quem ou o que é Deus?
 
-A nossa base de conhecimento é muito pouca, como afirma Paulo: "Pode o vaso questionar o oleiro: Porque me fizeste assim?", ora, que conhecimento teria o vazo acerca do oleiro? Deus criou tudo o que existe e nada existe fora dele, Ele é fonte de toda a vida e todo o conhecimento, ninguém nunca o viu e ninguém o conhece, ele está em todos os lugares ao mesmo tempo, ele conhece tudo o que é, houve e será, e seu poder é ilimitado, essas três características são exclusivas dEle. Na maioria dos casos, a crença com a não aceitação, provém de uma visão errônea, que se afasta da descrição acima.
+A nossa base de conhecimento é muito pouca, como afirma Paulo: "Pode o vaso questionar o oleiro: Porque me fizeste assim?", ora, que conhecimento teria o vazo acerca do oleiro? Deus criou tudo o que existe e nada existe fora dele, Ele é fonte de toda a vida e todo o conhecimento, ninguém nunca o viu e ninguém o conhece, ele está em todos os lugares ao mesmo tempo, ele conhece tudo o que é, houve e será, e seu poder é ilimitado, essas três características são exclusivas dEle. Na maioria dos casos, a crença com a não aceitação, provém de uma visão errônea, que se afasta da descrição acima (e de tudo o que é dito no artigo apropriado).
 
-Nossas experiências por ora nos fazem tropeçar e ao cair não exergamos mais o horizonte e a estrada em nosso campo de visão, passa a possuir apenas alguns metros, isso nao significa que é até ali que ela vai. Se ignorarmos a pedra que nos derrubou, ignorarmos aquele que a lançou e levantarmos, voltaremos a enxergar o horizonte e poderemos caminhar em sua direção. É assim a jornada humana na terra, nós temos um intelecto, temos memória, imaginação, compreensão, todos foram dados por Ele no momento da criação, mas cabe a nós utilizarmos para saber que a pedra deve ser removida, que se voltarmos atrás para questionar quem a lançou o caminho se tornará mais longo. Isso significa que devemos sempre seguir adiante e utilizar de nossas capacidades físicas e mentais, dos elementos do mundo à nossa volta, para ficar de pé e ver o horizonte, esse simbolismo representa voltar-se à fonte da Luz, aceitá-la, pois por meio dEle vem todo o conhecimento, por meio dele se enxerga o longe, o resultado de cada escolha, de cada ação, por meio dEle a compreensão do que é o Bem se torna clara e objetiva. Assim evitamos tropeços futuros, evitamos voltar a estrada alongando a caminhada.
+Nossas experiências por ora nos fazem tropeçar, e ao cair não exergamos mais o horizonte e a estrada em nosso campo de visão passa a possuir apenas alguns metros, isso nao significa que é até ali que ela vai. Se ignorarmos a pedra que nos derrubou, ignorarmos aquele que a lançou, e levantarmos, voltaremos a enxergar o horizonte e poderemos caminhar em sua direção. É assim a jornada humana na terra, nós temos um intelecto, temos memória, imaginação, compreensão, todos foram dados por Ele no momento da criação, mas cabe a nós utilizarmos para saber que a pedra deve ser removida, que se voltarmos atrás para questionar quem a lançou, o caminho se tornará mais longo. Isso significa que devemos sempre seguir adiante e utilizar de nossas capacidades físicas e mentais, dos elementos do mundo à nossa volta, para ficar de pé e ver o horizonte, esse simbolismo representa voltar-se à fonte da Luz, aceitá-la, pois por meio dEle vem todo o conhecimento, por meio dele se enxerga o longe, o resultado de cada escolha, de cada ação, por meio dEle a compreensão do que é o Bem se torna clara e objetiva. Assim evitamos tropeços futuros, evitamos voltar a estrada alongando a caminhada.
 
-Nenhuma ação é inconsequente, o universo só se manteria coeso havendo em tudo uma força de equilíbrio, isso significa que a injustiça não é perene, que tudo tem seu momento de acerto. Mas se temos <b>individualidade</b>, se temos <b>personalidade</b> e se somos <b>cientes de si mesmos</b>, de onde vieram essas características se Deus criou e mantém tudo o que existe? Claro que Ele o é também, Ele sabe. Poderia o fígado de um homem decidir destruir o coração? Poderiam seus rins tentar destruir o cérebro? NEle vivemos e nEle no movemos, não há força no universo capaz de questionar a personalidade divina senão de anular a sua própria, capaz de desafiar o intelecto divino senão de rebaixar o seu próprio, ou capaz destruir a fonte de toda a Criação senão de apenas destruir a si mesma.
+Nenhuma ação é inconsequente, o universo só se manteria coeso havendo em tudo uma força de equilíbrio, isso significa que a injustiça não é perene, que tudo tem seu momento de acerto. Mas se temos <b>individualidade</b>, se temos <b>personalidade</b> e se somos <b>cientes de si mesmos</b>, de onde vieram essas características se Deus criou e mantém tudo o que existe? Claro que Ele o é também, Ele sabe. Poderia o fígado de um homem decidir destruir o coração? Poderiam seus rins tentar destruir o cérebro? NEle vivemos e nEle nos movemos, não há força no universo capaz de questionar a personalidade divina senão de anular a sua própria, capaz de desafiar o intelecto divino senão de rebaixar o seu próprio, ou capaz destruir a fonte de toda a Criação senão de apenas destruir a si mesma.
 
 Com consciência do que disse nesses dois últimos parágrafos, a Aceitação não é uma bondade que fazemos a Deus (o que não é possível) e nem mesmo a nós, é resultado de nossa própria compreensão sendo ampliada, os resultados dessa aceitação sim, terão grande diferença em nossa vida. Nesse sentido, todos precisamos, tanto o crente para ter uma fé não fingida, como diz o evangelista, tanto o descrente para retornar a aceitar a parte da realidade que ignora, tanto o filho da escuridão, para erguer novamente sua cabeça ao alto e ver toda a realidade que se lhe tinha desaparecido e não voltar a tropeçar mais.
 
